More massive Caching refactoring: removed refine